fixed bugs, little improvements

--- a/ProfitSite/src/main/webapp/WEB-INF/web.xml
+++ b/ProfitSite/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
     <servlet>
         <servlet-name>StatusServlet</servlet-name>
-        <servlet-class>Profit.StatusServlet</servlet-class>
+        <servlet-class>bsu.fpmi.profit.StatusServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>StatusServlet</servlet-name>
@@ -15,7 +15,7 @@
 
     <servlet>
         <servlet-name>GetNameServlet</servlet-name>
-        <servlet-class>Profit.GetNameServlet</servlet-class>
+        <servlet-class>bsu.fpmi.profit.GetNameServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>GetNameServlet</servlet-name>
@@ -24,7 +24,7 @@
 
     <servlet>
         <servlet-name>CheckServlet</servlet-name>
-        <servlet-class>Profit.CheckServlet</servlet-class>
+        <servlet-class>bsu.fpmi.profit.CheckServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>CheckServlet</servlet-name>
@@ -33,7 +33,7 @@
 
     <servlet>
         <servlet-name>PageServlet</servlet-name>
-        <servlet-class>Profit.PageServlet</servlet-class>
+        <servlet-class>bsu.fpmi.profit.PageServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>PageServlet</servlet-name>
@@ -42,7 +42,7 @@
 
     <servlet>
         <servlet-name>Test1Servlet</servlet-name>
-        <servlet-class>Profit.Test1Servlet</servlet-class>
+        <servlet-class>bsu.fpmi.profit.Test1Servlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Test1Servlet</servlet-name>
@@ -51,7 +51,7 @@
 
     <servlet>
         <servlet-name>Test2Servlet</servlet-name>
-        <servlet-class>Profit.Test2Servlet</servlet-class>
+        <servlet-class>bsu.fpmi.profit.Test2Servlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>Test2Servlet</servlet-name>
@@ -60,7 +60,7 @@
 
     <filter>
         <filter-name>WebFilter</filter-name>
-        <filter-class>Profit.WebFilter</filter-class>
+        <filter-class>bsu.fpmi.profit.WebFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>WebFilter</filter-name>
@@ -69,7 +69,7 @@
 
     <servlet>
         <servlet-name>AdsServlet</servlet-name>
-        <servlet-class>Profit.AdsServlet</servlet-class>
+        <servlet-class>bsu.fpmi.profit.AdsServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>AdsServlet</servlet-name>
