--- a/ProfitSite/pom.xml
+++ b/ProfitSite/pom.xml
@@ -23,6 +23,11 @@
       <scope>compile</scope>
     </dependency>
 
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.15</version>
+    </dependency>
 
   </dependencies>
   <build>
