--- a/ProfitSite/src/main/webapp/WEB-INF/web.xml
+++ b/ProfitSite/src/main/webapp/WEB-INF/web.xml
@@ -76,4 +76,34 @@
         <url-pattern>/ads/*</url-pattern>
     </servlet-mapping>
 
+    <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>bsu.fpmi.profit.LoginServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>bsu.fpmi.profit.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/logout</url-pattern>
+    </servlet-mapping>
+
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>bsu.fpmi.profit.AuthenticationFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/ads/add</url-pattern>
+        <url-pattern>/ads/remove</url-pattern>
+        <url-pattern>/ads/edit</url-pattern>
+        <url-pattern>/ads/addReview</url-pattern>
+    </filter-mapping>
+
 </web-app>
