--- a/ProfitSite/pom.xml
+++ b/ProfitSite/pom.xml
@@ -29,6 +29,12 @@
       <version>8.0.15</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.15</version>
+    </dependency>
+
   </dependencies>
   <build>
     <finalName>ProfitSite</finalName>
